[package]
name = "eps-channels"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isis-eps-api ={ git = "ssh://git@github.com/Cube-OS/isis-eps-api" }
cubeos-service = { git = "ssh://git@github.com/Cube-OS/cubeos-service", features = ["app"]}
log = "0.4.14"
serde = { version = "1.0", features = ["derive"] }
clap = "<4.5.0"
clap_builder = "<4.5.0"
clap_derive = "<4.5.0"

[profile.release]
strip = true
lto = true
opt-level = "z"
panic = "abort"
codegen-units = 1